[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/game_scene.gd" type="Script" id=1]
[ext_resource path="res://images/wb.background.png" type="Texture" id=2]
[ext_resource path="res://objects/background/stars.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/balloon.tscn" type="PackedScene" id=4]
[ext_resource path="res://objects/wind.tscn" type="PackedScene" id=5]
[ext_resource path="res://gui/main_GUI.tscn" type="PackedScene" id=6]
[ext_resource path="res://objects/areas/area1_1.tscn" type="PackedScene" id=7]
[ext_resource path="res://sound/money.wav" type="AudioStream" id=8]
[ext_resource path="res://sound/game_over.wav" type="AudioStream" id=9]
[ext_resource path="res://sound/score.wav" type="AudioStream" id=10]
[ext_resource path="res://sound/Fon Music For Deflate.wav" type="AudioStream" id=11]

[sub_resource type="Animation" id=1]

resource_name = "normal"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]

length = 0.5
loop = false
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.9, 0.9 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 16.1169, 19.3403 ), Vector2( -16.296, -8.59569 ), Vector2( 3.46961, 37.6061 ), Vector2( 7.80898, -4.83509 ), Vector2( 0.0607018, 5.64091 ), Vector2( -3.17483, 1.28935 ), Vector2( 8.90068, 0.967012 ), Vector2( -2.12462, -0.96702 ), Vector2( 3.77277, 2.73988 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../../main_GUI/ColorRect:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]

resource_name = "shake_your_tale_s"
length = 0.55
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.9, 0.9 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 16.1169, 19.3403 ), Vector2( -16.296, -8.59569 ), Vector2( 3.46961, 37.6061 ), Vector2( 7.80898, -4.83509 ), Vector2( 0.0607018, 5.64091 ), Vector2( -3.17483, 1.28935 ), Vector2( 8.90068, 0.967012 ), Vector2( -2.12462, -0.96702 ), Vector2( 3.77277, 2.73988 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 324.018, 567.114 ), Vector2( 564.16, 568.725 ) ]
}

[node name="game_scene" type="Node2D" index="0"]

position = Vector2( 1, 0 )
script = ExtResource( 1 )

[node name="wb.background" type="Sprite" parent="." index="0"]

position = Vector2( 284.356, 689.33 )
scale = Vector2( 1.26018, 1.52962 )
z_index = -2
texture = ExtResource( 2 )
_sections_unfolded = [ "Z Index" ]

[node name="stars" parent="." index="1" instance=ExtResource( 3 )]

position = Vector2( -46.0519, -2.36938 )
z_index = -2

[node name="balloon" parent="." index="2" instance=ExtResource( 4 )]

position = Vector2( 313.405, 539.298 )
z_index = 2

[node name="wind" parent="." index="3" instance=ExtResource( 5 )]

position = Vector2( 7.91425, 535.451 )
_sections_unfolded = [ "Visibility", "Z Index" ]

[node name="main_GUI" parent="." index="4" instance=ExtResource( 6 )]

[node name="ColorRect" type="ColorRect" parent="main_GUI" index="17"]

modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -30.0
margin_top = -213.0
margin_right = 685.0
margin_bottom = 1374.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 1, 1, 1, 1 )
_sections_unfolded = [ "Visibility" ]

[node name="area1_1" parent="." index="5" instance=ExtResource( 7 )]

position = Vector2( 0.363525, 1139.77 )

[node name="camera_parent" type="Node2D" parent="." index="6"]

editor/display_folded = true
scale = Vector2( 0.99, 0.99 )
_sections_unfolded = [ "Transform" ]

[node name="camera" type="Camera2D" parent="camera_parent" index="0"]

position = Vector2( 319.962, 574.566 )
scale = Vector2( 0.9, 0.9 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Drag Margin", "Transform" ]

[node name="anim" type="AnimationPlayer" parent="camera_parent/camera" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/normal = SubResource( 1 )
anims/shake_your_tale = SubResource( 2 )
anims/shake_your_tale_s = SubResource( 3 )
anims/t = SubResource( 4 )
blend_times = [  ]

[node name="help_timer" type="Timer" parent="." index="7"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="coin_audio" type="AudioStreamPlayer2D" parent="." index="8"]

position = Vector2( 299.815, 584.353 )
stream = ExtResource( 8 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="gameover_audio" type="AudioStreamPlayer2D" parent="." index="9"]

position = Vector2( 288.357, 546.16 )
stream = ExtResource( 9 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="score_audio" type="AudioStreamPlayer2D" parent="." index="10"]

position = Vector2( 313.183, 561.437 )
stream = ExtResource( 10 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1
_sections_unfolded = [ "Transform" ]

[node name="score-timer" type="Timer" parent="." index="11"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[node name="fon_audio" type="AudioStreamPlayer2D" parent="." index="12"]

position = Vector2( 316, 560 )
stream = ExtResource( 11 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1
_sections_unfolded = [ "Transform" ]

[connection signal="timeout" from="help_timer" to="." method="_on_help_timer_timeout"]

[connection signal="timeout" from="score-timer" to="." method="_on_scoretimer_timeout"]


